--- a/views/templates/homepageUser.html.twig
+++ b/views/templates/homepageUser.html.twig
@@ -18,7 +18,7 @@
     {% block error %}
     {% endblock %}
 
-        <section class="homeUser-content" id="#homeUser">
+        <section class="homeUser-content" id="homeUser">
             <header class="homepageUser-header">
                 <h1>Bienvenue sur ta page d'activités !</h1>
                 <p>Que veux-tu faire maintenant ?</p>
