--- a/views/templates/subpages/_header.html.twig
+++ b/views/templates/subpages/_header.html.twig
@@ -133,7 +133,7 @@
                 <a href="index.php?route=colorings">Coloriages</a>
             </li>  
             <li>
-                <a href="index.php?route=games">Jeux</a>
+                <a href="index.php?route=displayGame">Jeux</a>
             </li>
             <li>
                 <a href="?route=pedagogie">Pédagogie</a>
