--- a/views/templates/homepageGame.html.twig
+++ b/views/templates/homepageGame.html.twig
@@ -31,7 +31,7 @@
                         <div class="card-game-title">
                             <h2 class ="sr-only">Jeux mémory</h2>
                         </div>
-                        <a href="?route=memory" class="jeu-action-button" id="memory" aria-label="Je Joue">
+                        <a href="?route=memo" class="jeu-action-button" id="memory" aria-label="Je Joue">
                             Mémo
                         </a>
                     </div>
