jeux pixelart fonctionnel

--- a/views/templates/homepageGame.html.twig
+++ b/views/templates/homepageGame.html.twig
@@ -44,7 +44,7 @@
                         <div class="card-game-title">
                             <h2 class ="sr-only">Jeu PixelArt</h2>
                         </div>
-                        <a href="?route=pixelart" class="jeu-action-button" id="pixelart" aria-label="Je joue">
+                        <a href="?route=displayPixelArt" class="jeu-action-button" id="pixelart" aria-label="Je joue">
                             PixelArt
                         </a>
                     </div>
