jeu clicksouris fonctionnel

--- a/views/templates/homepageGame.html.twig
+++ b/views/templates/homepageGame.html.twig
@@ -57,7 +57,7 @@
                         <div class="card-game-title">
                             <h2 class="sr-only">Acitvité jeux</h2>
                         </div>
-                        <a href="?route=clickSouris" class="jeu-action-button" id="click" aria-label="Je joue">
+                        <a href="?route=displayClick" class="jeu-action-button" id="click" aria-label="Je joue">
                             Attrape-Souris
                         </a>
                     </div>
