--- a/views/templates/homepageUser.html.twig
+++ b/views/templates/homepageUser.html.twig
@@ -57,7 +57,7 @@
                         <div class="card-title">
                             <h2 class="sr-only">Acitvité jeux</h2>
                         </div>
-                        <a href="?route=displayGames" class="activite-action-button" id="games" aria-label="Je joue">
+                        <a href="?route=displayGame" class="activite-action-button" id="games" aria-label="Je joue">
                             Je joue
                         </a>
                     </div>
