--- a/views/templates/memo.html.twig
+++ b/views/templates/memo.html.twig
@@ -36,7 +36,7 @@
             <h2><img src="assets/img/game/memory/levelCoeur.png" alt="1 coeur"></h2>
             <p>Temps : <span data-level="easy-time">{{ bestScores.easy.time ?? '—' }}s</span></p>
             <p>Coups : <span data-level="easy-moves">{{ bestScores.easy.moves ?? '—' }}</span></p>
-            <button id="btn-easy" class="level-buttons">Jouer</button>
+            <button id="btn-easy" class="level-buttons">Jouer></button>
         </div>
         <div class="score-level">
             <h2><img src="assets/img/game/memory/levelCoeur.png" alt="coeur">
@@ -66,7 +66,7 @@
         </div>
         <div class="timer-memo">
             <p>Temps</p>
-            <span id="timer">00:00</span>
+            <span id="memotimer">00:00</span>
         </div>
         <div class="start-memo">
             <button id="start-game">Démarrer</button>
